--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "webpack-dev-server --open --mode development",
     "build": "webpack"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,8 +20,15 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "redux-devtools": "^3.4.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
